package main

type Stock struct {
	Exch  EXCH
	Name  string
	Price float64
}
