package main

type User struct {
	UserID string
	// Funds float64
	// Portfolio map[]
	// WatchList []*Stocks{}
}
